GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.16alpha10 :
    
        - Spanish translation added.
        
    - 1.16alpha9 :
    
        - mailto can be set to external(...) to warn users above
          quota with any command of your choice (e.g. linpopup).
          Several parameters are available, see sample configuration
          file for details.
          
    - 1.16alpha8 :
    
        - Now cupspykota transmits SIGTERMS to the original  
          backend when the user deletes a job being processed.
          
        - The documentation is now licensed under the terms of the
          GNU GPL too.
          
    - 1.16alpha7 :
    
        - The CUPS backend is now fully functionnal (it seems).
        
        - From now on, the use of the pykota filter with CUPS 
          is deprecated. The pykota filter still has to be
          used with LPRng though.
        
    - 1.16alpha6 :
    
        - Bug fixed : when edpykota was used to add a printer
          with no user or group name, a bad user/group name "*" was
          added to the database.
          
    - 1.16alpha5 :
    
        - New CUPS backend supports device enumeration !
          This means that NO manual CUPS configuration has to
          be done. All can now be done from CUPS web interface.
        
    - 1.16alpha4 :
    
        - New CUPS backend added. 
        
    - 1.16alpha3 :
       
        - Minimal FAQ document added.
        
    - 1.16alpha2 :
    
        - CGI script now partially supports browser's language preference
        
    - 1.16alpha1 :
    
        - Ensures that the LDAP connection is really closed at end.
        